node environment update API
