# api/external/infra_proxy/request/nodes.pb.go
@@ -437,6 +437,81 @@ func (x *UpdateNode) GetOverrideAttributes() *_struct.Struct {
 	return nil
 }
 
+type UpdateNodeEnvironment struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Chef organization ID.
+	OrgId string `protobuf:"bytes,1,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
+	// Chef Infra Server ID.
+	ServerId string `protobuf:"bytes,2,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty"`
+	// Node name.
+	Name string `protobuf:"bytes,3,opt,name=name,proto3" json:"name,omitempty"`
+	// Node environment name.
+	Environment string `protobuf:"bytes,4,opt,name=environment,proto3" json:"environment,omitempty"`
+}
+
+func (x *UpdateNodeEnvironment) Reset() {
+	*x = UpdateNodeEnvironment{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_external_infra_proxy_request_nodes_proto_msgTypes[5]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UpdateNodeEnvironment) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateNodeEnvironment) ProtoMessage() {}
+
+func (x *UpdateNodeEnvironment) ProtoReflect() protoreflect.Message {
+	mi := &file_external_infra_proxy_request_nodes_proto_msgTypes[5]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateNodeEnvironment.ProtoReflect.Descriptor instead.
+func (*UpdateNodeEnvironment) Descriptor() ([]byte, []int) {
+	return file_external_infra_proxy_request_nodes_proto_rawDescGZIP(), []int{5}
+}
+
+func (x *UpdateNodeEnvironment) GetOrgId() string {
+	if x != nil {
+		return x.OrgId
+	}
+	return ""
+}
+
+func (x *UpdateNodeEnvironment) GetServerId() string {
+	if x != nil {
+		return x.ServerId
+	}
+	return ""
+}
+
+func (x *UpdateNodeEnvironment) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *UpdateNodeEnvironment) GetEnvironment() string {
+	if x != nil {
+		return x.Environment
+	}
+	return ""
+}
+
 var File_external_infra_proxy_request_nodes_proto protoreflect.FileDescriptor
 
 var file_external_infra_proxy_request_nodes_proto_rawDesc = []byte{
@@ -501,12 +576,20 @@ var file_external_infra_proxy_request_nodes_proto_rawDesc = []byte{
 	0x65, 0x5f, 0x61, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x18, 0x0b, 0x20, 0x01,
 	0x28, 0x0b, 0x32, 0x17, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74,
 	0x6f, 0x62, 0x75, 0x66, 0x2e, 0x53, 0x74, 0x72, 0x75, 0x63, 0x74, 0x52, 0x12, 0x6f, 0x76, 0x65,
-	0x72, 0x72, 0x69, 0x64, 0x65, 0x41, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x42,
-	0x3b, 0x5a, 0x39, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x68,
-	0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f,
-	0x65, 0x78, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x69, 0x6e, 0x66, 0x72, 0x61, 0x5f, 0x70,
-	0x72, 0x6f, 0x78, 0x79, 0x2f, 0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x62, 0x06, 0x70, 0x72,
-	0x6f, 0x74, 0x6f, 0x33,
+	0x72, 0x72, 0x69, 0x64, 0x65, 0x41, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x22,
+	0x81, 0x01, 0x0a, 0x15, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4e, 0x6f, 0x64, 0x65, 0x45, 0x6e,
+	0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d, 0x65, 0x6e, 0x74, 0x12, 0x15, 0x0a, 0x06, 0x6f, 0x72, 0x67,
+	0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x6f, 0x72, 0x67, 0x49, 0x64,
+	0x12, 0x1b, 0x0a, 0x09, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20,
+	0x01, 0x28, 0x09, 0x52, 0x08, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x49, 0x64, 0x12, 0x12, 0x0a,
+	0x04, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d,
+	0x65, 0x12, 0x20, 0x0a, 0x0b, 0x65, 0x6e, 0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d, 0x65, 0x6e, 0x74,
+	0x18, 0x04, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x65, 0x6e, 0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d,
+	0x65, 0x6e, 0x74, 0x42, 0x3b, 0x5a, 0x39, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f,
+	0x6d, 0x2f, 0x63, 0x68, 0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f,
+	0x61, 0x70, 0x69, 0x2f, 0x65, 0x78, 0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x69, 0x6e, 0x66,
+	0x72, 0x61, 0x5f, 0x70, 0x72, 0x6f, 0x78, 0x79, 0x2f, 0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -521,20 +604,21 @@ func file_external_infra_proxy_request_nodes_proto_rawDescGZIP() []byte {
 	return file_external_infra_proxy_request_nodes_proto_rawDescData
 }
 
-var file_external_infra_proxy_request_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
+var file_external_infra_proxy_request_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
 var file_external_infra_proxy_request_nodes_proto_goTypes = []interface{}{
-	(*Nodes)(nil),          // 0: chef.automate.api.infra_proxy.request.Nodes
-	(*Node)(nil),           // 1: chef.automate.api.infra_proxy.request.Node
-	(*AffectedNodes)(nil),  // 2: chef.automate.api.infra_proxy.request.AffectedNodes
-	(*DeleteNode)(nil),     // 3: chef.automate.api.infra_proxy.request.DeleteNode
-	(*UpdateNode)(nil),     // 4: chef.automate.api.infra_proxy.request.UpdateNode
-	(*_struct.Struct)(nil), // 5: google.protobuf.Struct
+	(*Nodes)(nil),                 // 0: chef.automate.api.infra_proxy.request.Nodes
+	(*Node)(nil),                  // 1: chef.automate.api.infra_proxy.request.Node
+	(*AffectedNodes)(nil),         // 2: chef.automate.api.infra_proxy.request.AffectedNodes
+	(*DeleteNode)(nil),            // 3: chef.automate.api.infra_proxy.request.DeleteNode
+	(*UpdateNode)(nil),            // 4: chef.automate.api.infra_proxy.request.UpdateNode
+	(*UpdateNodeEnvironment)(nil), // 5: chef.automate.api.infra_proxy.request.UpdateNodeEnvironment
+	(*_struct.Struct)(nil),        // 6: google.protobuf.Struct
 }
 var file_external_infra_proxy_request_nodes_proto_depIdxs = []int32{
-	5, // 0: chef.automate.api.infra_proxy.request.UpdateNode.automatic_attributes:type_name -> google.protobuf.Struct
-	5, // 1: chef.automate.api.infra_proxy.request.UpdateNode.default_attributes:type_name -> google.protobuf.Struct
-	5, // 2: chef.automate.api.infra_proxy.request.UpdateNode.normal_attributes:type_name -> google.protobuf.Struct
-	5, // 3: chef.automate.api.infra_proxy.request.UpdateNode.override_attributes:type_name -> google.protobuf.Struct
+	6, // 0: chef.automate.api.infra_proxy.request.UpdateNode.automatic_attributes:type_name -> google.protobuf.Struct
+	6, // 1: chef.automate.api.infra_proxy.request.UpdateNode.default_attributes:type_name -> google.protobuf.Struct
+	6, // 2: chef.automate.api.infra_proxy.request.UpdateNode.normal_attributes:type_name -> google.protobuf.Struct
+	6, // 3: chef.automate.api.infra_proxy.request.UpdateNode.override_attributes:type_name -> google.protobuf.Struct
 	4, // [4:4] is the sub-list for method output_type
 	4, // [4:4] is the sub-list for method input_type
 	4, // [4:4] is the sub-list for extension type_name
@@ -608,6 +692,18 @@ func file_external_infra_proxy_request_nodes_proto_init() {
 				return nil
 			}
 		}
+		file_external_infra_proxy_request_nodes_proto_msgTypes[5].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UpdateNodeEnvironment); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -615,7 +711,7 @@ func file_external_infra_proxy_request_nodes_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_external_infra_proxy_request_nodes_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   5,
+			NumMessages:   6,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
