# api/interservice/infra_proxy/response/nodes.pb.go
@@ -475,6 +475,63 @@ func (x *Node) GetOverrideAttributes() string {
 	return ""
 }
 
+type UpdateNodeEnvironment struct {
+	state         protoimpl.MessageState
+	sizeCache     protoimpl.SizeCache
+	unknownFields protoimpl.UnknownFields
+
+	// Node name.
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty" toml:"name,omitempty" mapstructure:"name,omitempty"`
+	// Node environment name.
+	Environment string `protobuf:"bytes,2,opt,name=environment,proto3" json:"environment,omitempty" toml:"environment,omitempty" mapstructure:"environment,omitempty"`
+}
+
+func (x *UpdateNodeEnvironment) Reset() {
+	*x = UpdateNodeEnvironment{}
+	if protoimpl.UnsafeEnabled {
+		mi := &file_interservice_infra_proxy_response_nodes_proto_msgTypes[6]
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		ms.StoreMessageInfo(mi)
+	}
+}
+
+func (x *UpdateNodeEnvironment) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*UpdateNodeEnvironment) ProtoMessage() {}
+
+func (x *UpdateNodeEnvironment) ProtoReflect() protoreflect.Message {
+	mi := &file_interservice_infra_proxy_response_nodes_proto_msgTypes[6]
+	if protoimpl.UnsafeEnabled && x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use UpdateNodeEnvironment.ProtoReflect.Descriptor instead.
+func (*UpdateNodeEnvironment) Descriptor() ([]byte, []int) {
+	return file_interservice_infra_proxy_response_nodes_proto_rawDescGZIP(), []int{6}
+}
+
+func (x *UpdateNodeEnvironment) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
+}
+
+func (x *UpdateNodeEnvironment) GetEnvironment() string {
+	if x != nil {
+		return x.Environment
+	}
+	return ""
+}
+
 var File_interservice_infra_proxy_response_nodes_proto protoreflect.FileDescriptor
 
 var file_interservice_infra_proxy_response_nodes_proto_rawDesc = []byte{
@@ -540,11 +597,16 @@ var file_interservice_infra_proxy_response_nodes_proto_rawDesc = []byte{
 	0x2f, 0x0a, 0x13, 0x6f, 0x76, 0x65, 0x72, 0x72, 0x69, 0x64, 0x65, 0x5f, 0x61, 0x74, 0x74, 0x72,
 	0x69, 0x62, 0x75, 0x74, 0x65, 0x73, 0x18, 0x0b, 0x20, 0x01, 0x28, 0x09, 0x52, 0x12, 0x6f, 0x76,
 	0x65, 0x72, 0x72, 0x69, 0x64, 0x65, 0x41, 0x74, 0x74, 0x72, 0x69, 0x62, 0x75, 0x74, 0x65, 0x73,
-	0x42, 0x40, 0x5a, 0x3e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63,
-	0x68, 0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69,
-	0x2f, 0x69, 0x6e, 0x74, 0x65, 0x72, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x69, 0x6e,
-	0x66, 0x72, 0x61, 0x5f, 0x70, 0x72, 0x6f, 0x78, 0x79, 0x2f, 0x72, 0x65, 0x73, 0x70, 0x6f, 0x6e,
-	0x73, 0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x22, 0x4d, 0x0a, 0x15, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x4e, 0x6f, 0x64, 0x65, 0x45, 0x6e,
+	0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d, 0x65, 0x6e, 0x74, 0x12, 0x12, 0x0a, 0x04, 0x6e, 0x61, 0x6d,
+	0x65, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x6e, 0x61, 0x6d, 0x65, 0x12, 0x20, 0x0a,
+	0x0b, 0x65, 0x6e, 0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d, 0x65, 0x6e, 0x74, 0x18, 0x02, 0x20, 0x01,
+	0x28, 0x09, 0x52, 0x0b, 0x65, 0x6e, 0x76, 0x69, 0x72, 0x6f, 0x6e, 0x6d, 0x65, 0x6e, 0x74, 0x42,
+	0x40, 0x5a, 0x3e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x68,
+	0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f,
+	0x69, 0x6e, 0x74, 0x65, 0x72, 0x73, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x2f, 0x69, 0x6e, 0x66,
+	0x72, 0x61, 0x5f, 0x70, 0x72, 0x6f, 0x78, 0x79, 0x2f, 0x72, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -559,14 +621,15 @@ func file_interservice_infra_proxy_response_nodes_proto_rawDescGZIP() []byte {
 	return file_interservice_infra_proxy_response_nodes_proto_rawDescData
 }
 
-var file_interservice_infra_proxy_response_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 6)
+var file_interservice_infra_proxy_response_nodes_proto_msgTypes = make([]protoimpl.MessageInfo, 7)
 var file_interservice_infra_proxy_response_nodes_proto_goTypes = []interface{}{
-	(*Nodes)(nil),         // 0: chef.automate.domain.infra_proxy.response.Nodes
-	(*AffectedNodes)(nil), // 1: chef.automate.domain.infra_proxy.response.AffectedNodes
-	(*NodeAttribute)(nil), // 2: chef.automate.domain.infra_proxy.response.NodeAttribute
-	(*DeleteNode)(nil),    // 3: chef.automate.domain.infra_proxy.response.DeleteNode
-	(*UpdateNode)(nil),    // 4: chef.automate.domain.infra_proxy.response.UpdateNode
-	(*Node)(nil),          // 5: chef.automate.domain.infra_proxy.response.Node
+	(*Nodes)(nil),                 // 0: chef.automate.domain.infra_proxy.response.Nodes
+	(*AffectedNodes)(nil),         // 1: chef.automate.domain.infra_proxy.response.AffectedNodes
+	(*NodeAttribute)(nil),         // 2: chef.automate.domain.infra_proxy.response.NodeAttribute
+	(*DeleteNode)(nil),            // 3: chef.automate.domain.infra_proxy.response.DeleteNode
+	(*UpdateNode)(nil),            // 4: chef.automate.domain.infra_proxy.response.UpdateNode
+	(*Node)(nil),                  // 5: chef.automate.domain.infra_proxy.response.Node
+	(*UpdateNodeEnvironment)(nil), // 6: chef.automate.domain.infra_proxy.response.UpdateNodeEnvironment
 }
 var file_interservice_infra_proxy_response_nodes_proto_depIdxs = []int32{
 	2, // 0: chef.automate.domain.infra_proxy.response.Nodes.nodes:type_name -> chef.automate.domain.infra_proxy.response.NodeAttribute
@@ -656,6 +719,18 @@ func file_interservice_infra_proxy_response_nodes_proto_init() {
 				return nil
 			}
 		}
+		file_interservice_infra_proxy_response_nodes_proto_msgTypes[6].Exporter = func(v interface{}, i int) interface{} {
+			switch v := v.(*UpdateNodeEnvironment); i {
+			case 0:
+				return &v.state
+			case 1:
+				return &v.sizeCache
+			case 2:
+				return &v.unknownFields
+			default:
+				return nil
+			}
+		}
 	}
 	type x struct{}
 	out := protoimpl.TypeBuilder{
@@ -663,7 +738,7 @@ func file_interservice_infra_proxy_response_nodes_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: file_interservice_infra_proxy_response_nodes_proto_rawDesc,
 			NumEnums:      0,
-			NumMessages:   6,
+			NumMessages:   7,
 			NumExtensions: 0,
 			NumServices:   0,
 		},
