# components/automate-gateway/handler/infra_proxy/nodes.go
@@ -115,6 +115,25 @@ func (a *InfraProxyServer) UpdateNode(ctx context.Context, r *gwreq.UpdateNode) 
 	}, nil
 }
 
+// UpdateNodeEnvironment updates the node environment
+func (a *InfraProxyServer) UpdateNodeEnvironment(ctx context.Context, r *gwreq.UpdateNodeEnvironment) (*gwres.UpdateNodeEnvironment, error) {
+	req := &infra_req.UpdateNodeEnvironment{
+		OrgId:       r.OrgId,
+		ServerId:    r.ServerId,
+		Name:        r.Name,
+		Environment: r.Environment,
+	}
+	res, err := a.client.UpdateNodeEnvironment(ctx, req)
+	if err != nil {
+		return nil, err
+	}
+
+	return &gwres.UpdateNodeEnvironment{
+		Name:        res.GetName(),
+		Environment: res.GetEnvironment(),
+	}, nil
+}
+
 func parseNodeAttributeFromRes(nodes []*infra_res.NodeAttribute) []*gwres.NodeAttribute {
 	nl := make([]*gwres.NodeAttribute, len(nodes))
 
